replace tomcat7.0.54 to tomcat8.5.4